<resources>
    <string name="app_name">Diction Exercises</string>
    <string name="exercises">Exercises</string>
    <string name="twisters">Twisters</string>
    <string name="settings">Settings</string>
    <string name="changeLang">Change Language</string>
    <string name="selected_lang">Selected Language: </string>
    <string name="cancel">Cancel</string>

    <string name="sound">Sound</string>
    <string name="breath">Breath</string>
    <string name="cheek">Cheek</string>
    <string name="chin">Chin</string>
    <string name="lip">Lip</string>
    <string name="tongue">Tongue</string>
</resources>