<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:orientation="vertical"
        tools:context=".activity.Main">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_path_1313" />

    <Button
            android:id="@+id/btn_twisters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:height="65dp"
            android:backgroundTint="@color/design_default_color_background"
            android:onClick="twisters"
            android:text="@string/twisters"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp" />

    <Button
            android:id="@+id/btn_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:height="65dp"
            android:backgroundTint="@color/design_default_color_background"
            android:onClick="exercises"
            android:text="@string/exercises"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp" />

    <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:height="65dp"
            android:backgroundTint="@color/design_default_color_background"
            android:onClick="settings"
            android:text="@string/settings"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            tools:text="Settings" />

</LinearLayout>